🎨 UP FRONT : user opinion

--- a/frontend/src/styles/pages/_mediaDetails.scss
+++ b/frontend/src/styles/pages/_mediaDetails.scss
@@ -159,6 +159,18 @@
             }
         }
 
+        .opinions {
+            h3 {
+                color: white;
+                margin: 15px;
+            }
+
+
+            .opinion {
+                max-width: 500px;
+            }
+        }
+
         .discussions,
         .opinions {
             text-align: center;
