--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -92,3 +92,37 @@ h6 {
     margin: 20px auto;
     cursor: pointer;
 }
+
+// .carrousel_container {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+    .media_carrousel {
+        width: 80%;
+        max-width: 1200px;
+        margin: 50px auto;
+
+        .slick-slide {
+            height: 250px;
+            max-width: 150px;
+            margin: 0 25px;
+
+            div {
+                width: 100%;
+                height: 100%;
+
+                figure {
+                    width: 100%;
+                    height: 100%;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
+
+        }
+    }
+// }
